# Data_Transfer

./: .gitignore  Arquivo_criado_em_C++.txt  CMakeLists.txt  FindPQXX.cmake  README.md  dateGenerator.py  dateSequence.txt  main.cpp
dataTransf/: LogClassDBExecuter.txt  LogClassDataBase.txt  LogClassExtractDateFromFile.txt  LogClassSQLSupplierDadosEstacao.txt  Log_Executer.txt  dateSequence.txt
